--- a/src/app/features/contas-cartoes/contas-cartoes.component.css
+++ b/src/app/features/contas-cartoes/contas-cartoes.component.css
@@ -295,4 +295,11 @@
   :host ::ng-deep .p-dialog {
     width: 90vw !important;
   }
+
+  :host ::ng-deep .p-inputtext,
+  :host ::ng-deep .p-dropdown,
+  :host ::ng-deep button {
+    min-height: 48px;
+    font-size: 16px; /* iOS zoom fix */
+  }
 }
