--- a/src/app/features/investimentos/investimentos.component.css
+++ b/src/app/features/investimentos/investimentos.component.css
@@ -278,4 +278,13 @@
   .profitability, .tips {
     padding: 16px;
   }
+
+  /* Mobile Inputs & Buttons */
+  input, select, button,
+  :host ::ng-deep .p-inputtext,
+  :host ::ng-deep .p-dropdown,
+  :host ::ng-deep .p-button {
+    min-height: 48px;
+    font-size: 16px; /* iOS zoom fix */
+  }
 }
