--- a/src/app/features/relatorios/relatorios.component.css
+++ b/src/app/features/relatorios/relatorios.component.css
@@ -182,5 +182,11 @@ input:focus {
   
   input {
     font-size: 16px; /* Prevent iOS zoom */
+    min-height: 48px;
+  }
+
+  button,
+  :host ::ng-deep .p-button {
+    min-height: 48px;
   }
 }
