--- a/src/app/features/admin/admin.component.html
+++ b/src/app/features/admin/admin.component.html
@@ -99,6 +99,10 @@
         </tr>
       </ng-template>
     </p-table>
+    <div class="mt-2 text-sm text-500">
+      <i class="pi pi-info-circle mr-1"></i>
+      Nota: A permissão "Acesso Conta" é salva localmente neste navegador. Para funcionar em outros dispositivos, é necessário suporte do backend.
+    </div>
   </div>
 
   <section class="grid two" *ngIf="!loading">
